lexParseBuildAst/gen/python/WalnutParser.py
# Generated from Walnut.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class WalnutParser ( Parser ):

    grammarFileName = "Walnut.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'static'", "'const'", "'var'", "','", 
                     "';'", "'='", "'{'", "'}'", "'class'", "':'", "'('", 
                     "')'", "'['", "']'", "'String'", "'Int'", "'Real'", 
                     "'Void'", "'.'", "'-'", "'*'", "'/'", "'%'", "'+'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'!'", 
                     "'&&'", "'||'", "'?'", "'nil'", "'while'", "'if'", 
                     "'else'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "TYPE_ID", "ID", "INT", "STRING", "REAL", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_varDec = 1
    RULE_decl = 2
    RULE_initDecl = 3
    RULE_array = 4
    RULE_classDefinition = 5
    RULE_classElement = 6
    RULE_fnDefinition = 7
    RULE_fnHeader = 8
    RULE_params = 9
    RULE_param = 10
    RULE_initParam = 11
    RULE_typeSpec = 12
    RULE_primitiveType = 13
    RULE_init = 14
    RULE_actualParams = 15
    RULE_keywordParam = 16
    RULE_expr = 17
    RULE_literal = 18
    RULE_block = 19
    RULE_statement = 20
    RULE_anId = 21

    ruleNames =  [ "program", "varDec", "decl", "initDecl", "array", "classDefinition", 
                   "classElement", "fnDefinition", "fnHeader", "params", 
                   "param", "initParam", "typeSpec", "primitiveType", "init", 
                   "actualParams", "keywordParam", "expr", "literal", "block", 
                   "statement", "anId" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    TYPE_ID=40
    ID=41
    INT=42
    STRING=43
    REAL=44
    LINE_COMMENT=45
    BLOCK_COMMENT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(WalnutParser.EOF, 0)

        def fnDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.FnDefinitionContext)
            else:
                return self.getTypedRuleContext(WalnutParser.FnDefinitionContext,i)


        def classDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.ClassDefinitionContext)
            else:
                return self.getTypedRuleContext(WalnutParser.ClassDefinitionContext,i)


        def varDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.VarDecContext)
            else:
                return self.getTypedRuleContext(WalnutParser.VarDecContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.StatementContext)
            else:
                return self.getTypedRuleContext(WalnutParser.StatementContext,i)


        def getRuleIndex(self):
            return WalnutParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = WalnutParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << WalnutParser.T__0) | (1 << WalnutParser.T__1) | (1 << WalnutParser.T__2) | (1 << WalnutParser.T__4) | (1 << WalnutParser.T__6) | (1 << WalnutParser.T__8) | (1 << WalnutParser.T__10) | (1 << WalnutParser.T__14) | (1 << WalnutParser.T__15) | (1 << WalnutParser.T__16) | (1 << WalnutParser.T__17) | (1 << WalnutParser.T__19) | (1 << WalnutParser.T__30) | (1 << WalnutParser.T__34) | (1 << WalnutParser.T__35) | (1 << WalnutParser.T__36) | (1 << WalnutParser.T__38) | (1 << WalnutParser.TYPE_ID) | (1 << WalnutParser.ID) | (1 << WalnutParser.INT) | (1 << WalnutParser.STRING) | (1 << WalnutParser.REAL))) != 0):
                self.state = 48
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.fnDefinition()
                    pass

                elif la_ == 2:
                    self.state = 45
                    self.classDefinition()
                    pass

                elif la_ == 3:
                    self.state = 46
                    self.varDec()
                    pass

                elif la_ == 4:
                    self.state = 47
                    self.statement()
                    pass


                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(WalnutParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.isStatic = None # Token
            self.kind = None # Token
            self.typeSp = None # TypeSpecContext

        def typeSpec(self):
            return self.getTypedRuleContext(WalnutParser.TypeSpecContext,0)


        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.DeclContext)
            else:
                return self.getTypedRuleContext(WalnutParser.DeclContext,i)


        def initDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.InitDeclContext)
            else:
                return self.getTypedRuleContext(WalnutParser.InitDeclContext,i)


        def getRuleIndex(self):
            return WalnutParser.RULE_varDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)




    def varDec(self):

        localctx = WalnutParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDec)
        self._la = 0 # Token type
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WalnutParser.T__0:
                    self.state = 55
                    localctx.isStatic = self.match(WalnutParser.T__0)


                self.state = 58
                localctx.kind = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==WalnutParser.T__1 or _la==WalnutParser.T__2):
                    localctx.kind = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 59
                localctx.typeSp = self.typeSpec()
                self.state = 62
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 60
                    self.decl()
                    pass

                elif la_ == 2:
                    self.state = 61
                    self.initDecl()
                    pass


                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==WalnutParser.T__3:
                    self.state = 64
                    self.match(WalnutParser.T__3)
                    self.state = 67
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 65
                        self.decl()
                        pass

                    elif la_ == 2:
                        self.state = 66
                        self.initDecl()
                        pass


                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 74
                self.match(WalnutParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WalnutParser.T__0:
                    self.state = 76
                    localctx.isStatic = self.match(WalnutParser.T__0)


                self.state = 79
                localctx.kind = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==WalnutParser.T__1 or _la==WalnutParser.T__2):
                    localctx.kind = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 80
                self.initDecl()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==WalnutParser.T__3:
                    self.state = 81
                    self.match(WalnutParser.T__3)
                    self.state = 82
                    self.initDecl()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 88
                self.match(WalnutParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(WalnutParser.ID, 0)

        def getRuleIndex(self):
            return WalnutParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = WalnutParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            localctx.name = self.match(WalnutParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return WalnutParser.RULE_initDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArrayInitContext(InitDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a WalnutParser.InitDeclContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def array(self):
            return self.getTypedRuleContext(WalnutParser.ArrayContext,0)

        def ID(self):
            return self.getToken(WalnutParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInit" ):
                return visitor.visitArrayInit(self)
            else:
                return visitor.visitChildren(self)


    class ExprInitContext(InitDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a WalnutParser.InitDeclContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(WalnutParser.ExprContext,0)

        def ID(self):
            return self.getToken(WalnutParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprInit" ):
                return visitor.visitExprInit(self)
            else:
                return visitor.visitChildren(self)



    def initDecl(self):

        localctx = WalnutParser.InitDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_initDecl)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = WalnutParser.ExprInitContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                localctx.name = self.match(WalnutParser.ID)
                self.state = 95
                self.match(WalnutParser.T__5)
                self.state = 96
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = WalnutParser.ArrayInitContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                localctx.name = self.match(WalnutParser.ID)
                self.state = 98
                self.match(WalnutParser.T__5)
                self.state = 99
                self.match(WalnutParser.T__6)
                self.state = 100
                self.array()
                self.state = 101
                self.match(WalnutParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._array = None # ArrayContext
            self.nested = list() # of ArrayContexts
            self._expr = None # ExprContext
            self.elements = list() # of ExprContexts

        def array(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.ArrayContext)
            else:
                return self.getTypedRuleContext(WalnutParser.ArrayContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.ExprContext)
            else:
                return self.getTypedRuleContext(WalnutParser.ExprContext,i)


        def getRuleIndex(self):
            return WalnutParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = WalnutParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [WalnutParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(WalnutParser.T__6)
                self.state = 106
                localctx._array = self.array()
                localctx.nested.append(localctx._array)
                self.state = 107
                self.match(WalnutParser.T__7)
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 108
                        self.match(WalnutParser.T__3)
                        self.state = 109
                        self.match(WalnutParser.T__6)
                        self.state = 110
                        localctx._array = self.array()
                        localctx.nested.append(localctx._array)
                        self.state = 111
                        self.match(WalnutParser.T__7) 
                    self.state = 117
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WalnutParser.T__3:
                    self.state = 118
                    self.match(WalnutParser.T__3)


                pass
            elif token in [WalnutParser.T__10, WalnutParser.T__14, WalnutParser.T__15, WalnutParser.T__16, WalnutParser.T__17, WalnutParser.T__19, WalnutParser.T__30, WalnutParser.T__34, WalnutParser.TYPE_ID, WalnutParser.ID, WalnutParser.INT, WalnutParser.STRING, WalnutParser.REAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                localctx._expr = self.expr(0)
                localctx.elements.append(localctx._expr)
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 122
                        self.match(WalnutParser.T__3)
                        self.state = 123
                        localctx._expr = self.expr(0)
                        localctx.elements.append(localctx._expr) 
                    self.state = 128
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WalnutParser.T__3:
                    self.state = 129
                    self.match(WalnutParser.T__3)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.typeName = None # Token
            self.superName = None # Token
            self._classElement = None # ClassElementContext
            self.classBody = list() # of ClassElementContexts

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(WalnutParser.TYPE_ID)
            else:
                return self.getToken(WalnutParser.TYPE_ID, i)

        def classElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.ClassElementContext)
            else:
                return self.getTypedRuleContext(WalnutParser.ClassElementContext,i)


        def getRuleIndex(self):
            return WalnutParser.RULE_classDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDefinition" ):
                return visitor.visitClassDefinition(self)
            else:
                return visitor.visitChildren(self)




    def classDefinition(self):

        localctx = WalnutParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(WalnutParser.T__8)
            self.state = 135
            localctx.typeName = self.match(WalnutParser.TYPE_ID)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WalnutParser.T__9:
                self.state = 136
                self.match(WalnutParser.T__9)
                self.state = 137
                localctx.superName = self.match(WalnutParser.TYPE_ID)


            self.state = 140
            self.match(WalnutParser.T__6)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << WalnutParser.T__0) | (1 << WalnutParser.T__1) | (1 << WalnutParser.T__2) | (1 << WalnutParser.T__14) | (1 << WalnutParser.T__15) | (1 << WalnutParser.T__16) | (1 << WalnutParser.T__17) | (1 << WalnutParser.TYPE_ID))) != 0):
                self.state = 141
                localctx._classElement = self.classElement()
                localctx.classBody.append(localctx._classElement)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self.match(WalnutParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fnDefinition(self):
            return self.getTypedRuleContext(WalnutParser.FnDefinitionContext,0)


        def varDec(self):
            return self.getTypedRuleContext(WalnutParser.VarDecContext,0)


        def getRuleIndex(self):
            return WalnutParser.RULE_classElement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassElement" ):
                return visitor.visitClassElement(self)
            else:
                return visitor.visitChildren(self)




    def classElement(self):

        localctx = WalnutParser.ClassElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classElement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 149
                self.fnDefinition()
                pass

            elif la_ == 2:
                self.state = 150
                self.varDec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FnDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fnHeader(self):
            return self.getTypedRuleContext(WalnutParser.FnHeaderContext,0)


        def block(self):
            return self.getTypedRuleContext(WalnutParser.BlockContext,0)


        def getRuleIndex(self):
            return WalnutParser.RULE_fnDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnDefinition" ):
                return visitor.visitFnDefinition(self)
            else:
                return visitor.visitChildren(self)




    def fnDefinition(self):

        localctx = WalnutParser.FnDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fnDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.fnHeader()
            self.state = 154
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FnHeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return WalnutParser.RULE_fnHeader

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConstrProtoContext(FnHeaderContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a WalnutParser.FnHeaderContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE_ID(self):
            return self.getToken(WalnutParser.TYPE_ID, 0)
        def params(self):
            return self.getTypedRuleContext(WalnutParser.ParamsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstrProto" ):
                return visitor.visitConstrProto(self)
            else:
                return visitor.visitChildren(self)


    class FnProtoContext(FnHeaderContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a WalnutParser.FnHeaderContext
            super().__init__(parser)
            self.isStatic = None # Token
            self.copyFrom(ctx)

        def typeSpec(self):
            return self.getTypedRuleContext(WalnutParser.TypeSpecContext,0)

        def ID(self):
            return self.getToken(WalnutParser.ID, 0)
        def params(self):
            return self.getTypedRuleContext(WalnutParser.ParamsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnProto" ):
                return visitor.visitFnProto(self)
            else:
                return visitor.visitChildren(self)



    def fnHeader(self):

        localctx = WalnutParser.FnHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fnHeader)
        self._la = 0 # Token type
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                localctx = WalnutParser.FnProtoContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WalnutParser.T__0:
                    self.state = 156
                    localctx.isStatic = self.match(WalnutParser.T__0)


                self.state = 159
                self.typeSpec()
                self.state = 160
                self.match(WalnutParser.ID)
                self.state = 161
                self.match(WalnutParser.T__10)
                self.state = 162
                self.params()
                self.state = 163
                self.match(WalnutParser.T__11)
                pass

            elif la_ == 2:
                localctx = WalnutParser.ConstrProtoContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(WalnutParser.TYPE_ID)
                self.state = 166
                self.match(WalnutParser.T__10)
                self.state = 167
                self.params()
                self.state = 168
                self.match(WalnutParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._param = None # ParamContext
            self.formals = list() # of ParamContexts
            self._initParam = None # InitParamContext
            self.initFormals = list() # of InitParamContexts

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.ParamContext)
            else:
                return self.getTypedRuleContext(WalnutParser.ParamContext,i)


        def initParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WalnutParser.InitParamContext)
            else:
                return self.getTypedRuleContext(WalnutParser.InitParamContext,i)


        def getRuleIndex(self):
            return WalnutParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = WalnutParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                localctx._param = self.param()
                localctx.formals.append(localctx._param)
                self.state = 177
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 173
                        self.match(WalnutParser.T__3)
                        self.state = 174
                        localctx._param = self.param()
                        localctx.formals.append(localctx._param) 
                    self.state = 179
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==WalnutParser.T__3:
                    self.state = 180
                    self.match(WalnutParser.T__3)
                    self.state = 181
                    localctx._initParam = self.initParam()
                    localctx.initFormals.append(localctx._initParam)
                    self.state = 186
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
